Fixing transparency on background for open source section on mobile and clicking dropdown menu links now closes the menu

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -93,7 +93,7 @@ ul {
 li {
     display: inline;
     padding: 0 10px;
-    margin: 0;
+/*    margin: 0;*/
 }
 
 .navbutton {
@@ -101,7 +101,7 @@ li {
 }
 
 .nav {
-    padding: 0;
+/*    padding: 0;*/
     position: relative;
     visibility: visible;
 }
@@ -163,33 +163,12 @@ li {
 /* Open Source Work Styling */
 
 .open-source {
-    background: linear-gradient(
-      rgba(255, 255, 255, 0.7),
-      rgba(255, 255, 255, 0.7)
-    );
-    background: -webkit-linear-gradient(
-      rgba(255, 255, 255, 0.7),
-      rgba(255, 255, 255, 0.7)
-    );
-    background: -webkit-gradient(
-        linear, 
-        center top, 
-        center bottom, 
-        from(rgba(255, 255, 255, 0.7)), 
-        to(rgba(255, 255, 255, 0.7))
-    );
-    background: -moz-linear-gradient(
-        rgba(255, 255, 255, 0.7),
-        rgba(255, 255, 255, 0.7)
-    );
-    background: -o-linear-gradient(
-        rgba(255, 255, 255, 0.7),
-        rgba(255, 255, 255, 0.7)
-    );
-    background: -ms-linear-gradient(
-        rgba(255, 255, 255, 0.7),
-        rgba(255, 255, 255, 0.7)
-    );
+    background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7));
+    background: -moz-linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7));
+    background: -ms-linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7));
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(rgba(255, 255, 255, 0.7)), color-stop(rgba(255, 255, 255, 0.7)));
+    background: -webkit-linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7));
+    background: -o-linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7));
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -278,7 +257,7 @@ li {
 
     .responsive ul {
         width: calc(100%-20px)
-        padding: 10px;
+        padding: 0 10px;
     }
     
     li:not(:nth-child(1)) {
